# fastapi_hw

./: .gitignore  app.py  main.py  pyproject.toml  test.py
mocking/: pyvenv.cfg
