[tool.poetry]
name = "fastapi_hw"
version = "0.1.0"
description = ""
authors = ["comazzo <chuvaev.pavel@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
DateTime = "^4.3"
requests = "^2.25.0"
httpx = "^0.16.1"
fastapi = {extras = ["all"], version = "^0.61.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
